; ModuleID = '/home/carl/AnghaBench/reactos/base/applications/dxdiag/extr_system.c_GetDirectXVersion.c'
source_filename = "/home/carl/AnghaBench/reactos/base/applications/dxdiag/extr_system.c_GetDirectXVersion.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@HKEY_LOCAL_MACHINE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [27 x i32] [i32 83, i32 79, i32 70, i32 84, i32 87, i32 65, i32 82, i32 69, i32 92, i32 77, i32 105, i32 99, i32 114, i32 111, i32 115, i32 111, i32 102, i32 116, i32 92, i32 68, i32 105, i32 114, i32 101, i32 99, i32 116, i32 88, i32 0], align 4
@.str.1 = private unnamed_addr constant [8 x i32] [i32 86, i32 101, i32 114, i32 115, i32 105, i32 111, i32 110, i32 0], align 4
@REG_SZ = common dso_local global i32 0, align 4
@FALSE = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [10 x i32] [i32 52, i32 46, i32 48, i32 50, i32 46, i32 48, i32 48, i32 57, i32 53, i32 0], align 4
@.str.3 = private unnamed_addr constant [4 x i32] [i32 49, i32 46, i32 48, i32 0], align 4
@.str.4 = private unnamed_addr constant [13 x i32] [i32 52, i32 46, i32 48, i32 51, i32 46, i32 48, i32 48, i32 46, i32 49, i32 48, i32 57, i32 54, i32 0], align 4
@.str.5 = private unnamed_addr constant [4 x i32] [i32 50, i32 46, i32 48, i32 0], align 4
@.str.6 = private unnamed_addr constant [10 x i32] [i32 52, i32 46, i32 48, i32 52, i32 46, i32 48, i32 48, i32 54, i32 56, i32 0], align 4
@.str.7 = private unnamed_addr constant [4 x i32] [i32 51, i32 46, i32 48, i32 0], align 4
@.str.8 = private unnamed_addr constant [10 x i32] [i32 52, i32 46, i32 48, i32 52, i32 46, i32 48, i32 48, i32 54, i32 57, i32 0], align 4
@.str.9 = private unnamed_addr constant [13 x i32] [i32 52, i32 46, i32 48, i32 53, i32 46, i32 48, i32 48, i32 46, i32 48, i32 49, i32 53, i32 53, i32 0], align 4
@.str.10 = private unnamed_addr constant [4 x i32] [i32 53, i32 46, i32 48, i32 0], align 4
@.str.11 = private unnamed_addr constant [13 x i32] [i32 52, i32 46, i32 48, i32 53, i32 46, i32 48, i32 49, i32 46, i32 49, i32 55, i32 50, i32 49, i32 0], align 4
@.str.12 = private unnamed_addr constant [13 x i32] [i32 52, i32 46, i32 48, i32 53, i32 46, i32 48, i32 49, i32 46, i32 49, i32 57, i32 57, i32 56, i32 0], align 4
@.str.13 = private unnamed_addr constant [13 x i32] [i32 52, i32 46, i32 48, i32 54, i32 46, i32 48, i32 50, i32 46, i32 48, i32 52, i32 51, i32 54, i32 0], align 4
@.str.14 = private unnamed_addr constant [4 x i32] [i32 54, i32 46, i32 48, i32 0], align 4
@.str.15 = private unnamed_addr constant [13 x i32] [i32 52, i32 46, i32 48, i32 55, i32 46, i32 48, i32 48, i32 46, i32 48, i32 55, i32 48, i32 48, i32 0], align 4
@.str.16 = private unnamed_addr constant [4 x i32] [i32 55, i32 46, i32 48, i32 0], align 4
@.str.17 = private unnamed_addr constant [13 x i32] [i32 52, i32 46, i32 48, i32 55, i32 46, i32 48, i32 48, i32 46, i32 48, i32 55, i32 49, i32 54, i32 0], align 4
@.str.18 = private unnamed_addr constant [5 x i32] [i32 55, i32 46, i32 48, i32 97, i32 0], align 4
@.str.19 = private unnamed_addr constant [13 x i32] [i32 52, i32 46, i32 48, i32 56, i32 46, i32 48, i32 48, i32 46, i32 48, i32 52, i32 48, i32 48, i32 0], align 4
@.str.20 = private unnamed_addr constant [4 x i32] [i32 56, i32 46, i32 48, i32 0], align 4
@.str.21 = private unnamed_addr constant [13 x i32] [i32 52, i32 46, i32 48, i32 56, i32 46, i32 48, i32 49, i32 46, i32 48, i32 56, i32 56, i32 49, i32 0], align 4
@.str.22 = private unnamed_addr constant [4 x i32] [i32 56, i32 46, i32 49, i32 0], align 4
@.str.23 = private unnamed_addr constant [13 x i32] [i32 52, i32 46, i32 48, i32 56, i32 46, i32 48, i32 49, i32 46, i32 48, i32 56, i32 49, i32 48, i32 0], align 4
@.str.24 = private unnamed_addr constant [15 x i32] [i32 52, i32 46, i32 48, i32 57, i32 46, i32 48, i32 48, i32 48, i32 48, i32 46, i32 48, i32 57, i32 48, i32 48, i32 0], align 4
@.str.25 = private unnamed_addr constant [4 x i32] [i32 57, i32 46, i32 48, i32 0], align 4
@.str.26 = private unnamed_addr constant [13 x i32] [i32 52, i32 46, i32 48, i32 57, i32 46, i32 48, i32 48, i32 46, i32 48, i32 57, i32 48, i32 48, i32 0], align 4
@.str.27 = private unnamed_addr constant [15 x i32] [i32 52, i32 46, i32 48, i32 57, i32 46, i32 48, i32 48, i32 48, i32 48, i32 46, i32 48, i32 57, i32 48, i32 49, i32 0], align 4
@.str.28 = private unnamed_addr constant [5 x i32] [i32 57, i32 46, i32 48, i32 97, i32 0], align 4
@.str.29 = private unnamed_addr constant [13 x i32] [i32 52, i32 46, i32 48, i32 57, i32 46, i32 48, i32 48, i32 46, i32 48, i32 57, i32 48, i32 49, i32 0], align 4
@.str.30 = private unnamed_addr constant [15 x i32] [i32 52, i32 46, i32 48, i32 57, i32 46, i32 48, i32 48, i32 48, i32 48, i32 46, i32 48, i32 57, i32 48, i32 50, i32 0], align 4
@.str.31 = private unnamed_addr constant [5 x i32] [i32 57, i32 46, i32 48, i32 98, i32 0], align 4
@.str.32 = private unnamed_addr constant [13 x i32] [i32 52, i32 46, i32 48, i32 57, i32 46, i32 48, i32 48, i32 46, i32 48, i32 57, i32 48, i32 50, i32 0], align 4
@.str.33 = private unnamed_addr constant [13 x i32] [i32 52, i32 46, i32 48, i32 57, i32 46, i32 48, i32 48, i32 46, i32 48, i32 57, i32 48, i32 52, i32 0], align 4
@.str.34 = private unnamed_addr constant [5 x i32] [i32 57, i32 46, i32 48, i32 99, i32 0], align 4
@.str.35 = private unnamed_addr constant [15 x i32] [i32 52, i32 46, i32 48, i32 57, i32 46, i32 48, i32 48, i32 48, i32 48, i32 46, i32 48, i32 57, i32 48, i32 52, i32 0], align 4
@TRUE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @GetDirectXVersion to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @GetDirectXVersion(i32* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  %4 = alloca [20 x i32], align 16
  store i32* %0, i32** %3, align 8
  %5 = load i32, i32* @HKEY_LOCAL_MACHINE, align 4
  %6 = load i32, i32* @REG_SZ, align 4
  %7 = getelementptr inbounds [20 x i32], [20 x i32]* %4, i64 0, i64 0
  %8 = call i32 @GetRegValue(i32 %5, i8* bitcast ([27 x i32]* @.str to i8*), i8* bitcast ([8 x i32]* @.str.1 to i8*), i32 %6, i32* %7, i32 80)
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %12, label %10

10:                                               ; preds = %1
  %11 = load i32, i32* @FALSE, align 4
  store i32 %11, i32* %2, align 4
  br label %183

12:                                               ; preds = %1
  %13 = getelementptr inbounds [20 x i32], [20 x i32]* %4, i64 0, i64 0
  %14 = call i32 @wcscmp(i32* %13, i8* bitcast ([10 x i32]* @.str.2 to i8*))
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %19, label %16

16:                                               ; preds = %12
  %17 = load i32*, i32** %3, align 8
  %18 = call i32 @wcscpy(i32* %17, i8* bitcast ([4 x i32]* @.str.3 to i8*))
  br label %181

19:                                               ; preds = %12
  %20 = getelementptr inbounds [20 x i32], [20 x i32]* %4, i64 0, i64 0
  %21 = call i32 @wcscmp(i32* %20, i8* bitcast ([13 x i32]* @.str.4 to i8*))
  %22 = icmp ne i32 %21, 0
  br i1 %22, label %26, label %23

23:                                               ; preds = %19
  %24 = load i32*, i32** %3, align 8
  %25 = call i32 @wcscpy(i32* %24, i8* bitcast ([4 x i32]* @.str.5 to i8*))
  br label %180

26:                                               ; preds = %19
  %27 = getelementptr inbounds [20 x i32], [20 x i32]* %4, i64 0, i64 0
  %28 = call i32 @wcscmp(i32* %27, i8* bitcast ([10 x i32]* @.str.6 to i8*))
  %29 = icmp ne i32 %28, 0
  br i1 %29, label %33, label %30

30:                                               ; preds = %26
  %31 = load i32*, i32** %3, align 8
  %32 = call i32 @wcscpy(i32* %31, i8* bitcast ([4 x i32]* @.str.7 to i8*))
  br label %179

33:                                               ; preds = %26
  %34 = getelementptr inbounds [20 x i32], [20 x i32]* %4, i64 0, i64 0
  %35 = call i32 @wcscmp(i32* %34, i8* bitcast ([10 x i32]* @.str.8 to i8*))
  %36 = icmp ne i32 %35, 0
  br i1 %36, label %40, label %37

37:                                               ; preds = %33
  %38 = load i32*, i32** %3, align 8
  %39 = call i32 @wcscpy(i32* %38, i8* bitcast ([4 x i32]* @.str.7 to i8*))
  br label %178

40:                                               ; preds = %33
  %41 = getelementptr inbounds [20 x i32], [20 x i32]* %4, i64 0, i64 0
  %42 = call i32 @wcscmp(i32* %41, i8* bitcast ([13 x i32]* @.str.9 to i8*))
  %43 = icmp ne i32 %42, 0
  br i1 %43, label %47, label %44

44:                                               ; preds = %40
  %45 = load i32*, i32** %3, align 8
  %46 = call i32 @wcscpy(i32* %45, i8* bitcast ([4 x i32]* @.str.10 to i8*))
  br label %177

47:                                               ; preds = %40
  %48 = getelementptr inbounds [20 x i32], [20 x i32]* %4, i64 0, i64 0
  %49 = call i32 @wcscmp(i32* %48, i8* bitcast ([13 x i32]* @.str.11 to i8*))
  %50 = icmp ne i32 %49, 0
  br i1 %50, label %54, label %51

51:                                               ; preds = %47
  %52 = load i32*, i32** %3, align 8
  %53 = call i32 @wcscpy(i32* %52, i8* bitcast ([4 x i32]* @.str.10 to i8*))
  br label %176

54:                                               ; preds = %47
  %55 = getelementptr inbounds [20 x i32], [20 x i32]* %4, i64 0, i64 0
  %56 = call i32 @wcscmp(i32* %55, i8* bitcast ([13 x i32]* @.str.12 to i8*))
  %57 = icmp ne i32 %56, 0
  br i1 %57, label %61, label %58

58:                                               ; preds = %54
  %59 = load i32*, i32** %3, align 8
  %60 = call i32 @wcscpy(i32* %59, i8* bitcast ([4 x i32]* @.str.10 to i8*))
  br label %175

61:                                               ; preds = %54
  %62 = getelementptr inbounds [20 x i32], [20 x i32]* %4, i64 0, i64 0
  %63 = call i32 @wcscmp(i32* %62, i8* bitcast ([13 x i32]* @.str.13 to i8*))
  %64 = icmp ne i32 %63, 0
  br i1 %64, label %68, label %65

65:                                               ; preds = %61
  %66 = load i32*, i32** %3, align 8
  %67 = call i32 @wcscpy(i32* %66, i8* bitcast ([4 x i32]* @.str.14 to i8*))
  br label %174

68:                                               ; preds = %61
  %69 = getelementptr inbounds [20 x i32], [20 x i32]* %4, i64 0, i64 0
  %70 = call i32 @wcscmp(i32* %69, i8* bitcast ([13 x i32]* @.str.15 to i8*))
  %71 = icmp ne i32 %70, 0
  br i1 %71, label %75, label %72

72:                                               ; preds = %68
  %73 = load i32*, i32** %3, align 8
  %74 = call i32 @wcscpy(i32* %73, i8* bitcast ([4 x i32]* @.str.16 to i8*))
  br label %173

75:                                               ; preds = %68
  %76 = getelementptr inbounds [20 x i32], [20 x i32]* %4, i64 0, i64 0
  %77 = call i32 @wcscmp(i32* %76, i8* bitcast ([13 x i32]* @.str.17 to i8*))
  %78 = icmp ne i32 %77, 0
  br i1 %78, label %82, label %79

79:                                               ; preds = %75
  %80 = load i32*, i32** %3, align 8
  %81 = call i32 @wcscpy(i32* %80, i8* bitcast ([5 x i32]* @.str.18 to i8*))
  br label %172

82:                                               ; preds = %75
  %83 = getelementptr inbounds [20 x i32], [20 x i32]* %4, i64 0, i64 0
  %84 = call i32 @wcscmp(i32* %83, i8* bitcast ([13 x i32]* @.str.19 to i8*))
  %85 = icmp ne i32 %84, 0
  br i1 %85, label %89, label %86

86:                                               ; preds = %82
  %87 = load i32*, i32** %3, align 8
  %88 = call i32 @wcscpy(i32* %87, i8* bitcast ([4 x i32]* @.str.20 to i8*))
  br label %171

89:                                               ; preds = %82
  %90 = getelementptr inbounds [20 x i32], [20 x i32]* %4, i64 0, i64 0
  %91 = call i32 @wcscmp(i32* %90, i8* bitcast ([13 x i32]* @.str.21 to i8*))
  %92 = icmp ne i32 %91, 0
  br i1 %92, label %96, label %93

93:                                               ; preds = %89
  %94 = load i32*, i32** %3, align 8
  %95 = call i32 @wcscpy(i32* %94, i8* bitcast ([4 x i32]* @.str.22 to i8*))
  br label %170

96:                                               ; preds = %89
  %97 = getelementptr inbounds [20 x i32], [20 x i32]* %4, i64 0, i64 0
  %98 = call i32 @wcscmp(i32* %97, i8* bitcast ([13 x i32]* @.str.23 to i8*))
  %99 = icmp ne i32 %98, 0
  br i1 %99, label %103, label %100

100:                                              ; preds = %96
  %101 = load i32*, i32** %3, align 8
  %102 = call i32 @wcscpy(i32* %101, i8* bitcast ([4 x i32]* @.str.22 to i8*))
  br label %169

103:                                              ; preds = %96
  %104 = getelementptr inbounds [20 x i32], [20 x i32]* %4, i64 0, i64 0
  %105 = call i32 @wcscmp(i32* %104, i8* bitcast ([15 x i32]* @.str.24 to i8*))
  %106 = icmp ne i32 %105, 0
  br i1 %106, label %110, label %107

107:                                              ; preds = %103
  %108 = load i32*, i32** %3, align 8
  %109 = call i32 @wcscpy(i32* %108, i8* bitcast ([4 x i32]* @.str.25 to i8*))
  br label %168

110:                                              ; preds = %103
  %111 = getelementptr inbounds [20 x i32], [20 x i32]* %4, i64 0, i64 0
  %112 = call i32 @wcscmp(i32* %111, i8* bitcast ([13 x i32]* @.str.26 to i8*))
  %113 = icmp ne i32 %112, 0
  br i1 %113, label %117, label %114

114:                                              ; preds = %110
  %115 = load i32*, i32** %3, align 8
  %116 = call i32 @wcscpy(i32* %115, i8* bitcast ([4 x i32]* @.str.25 to i8*))
  br label %167

117:                                              ; preds = %110
  %118 = getelementptr inbounds [20 x i32], [20 x i32]* %4, i64 0, i64 0
  %119 = call i32 @wcscmp(i32* %118, i8* bitcast ([15 x i32]* @.str.27 to i8*))
  %120 = icmp ne i32 %119, 0
  br i1 %120, label %124, label %121

121:                                              ; preds = %117
  %122 = load i32*, i32** %3, align 8
  %123 = call i32 @wcscpy(i32* %122, i8* bitcast ([5 x i32]* @.str.28 to i8*))
  br label %166

124:                                              ; preds = %117
  %125 = getelementptr inbounds [20 x i32], [20 x i32]* %4, i64 0, i64 0
  %126 = call i32 @wcscmp(i32* %125, i8* bitcast ([13 x i32]* @.str.29 to i8*))
  %127 = icmp ne i32 %126, 0
  br i1 %127, label %131, label %128

128:                                              ; preds = %124
  %129 = load i32*, i32** %3, align 8
  %130 = call i32 @wcscpy(i32* %129, i8* bitcast ([5 x i32]* @.str.28 to i8*))
  br label %165

131:                                              ; preds = %124
  %132 = getelementptr inbounds [20 x i32], [20 x i32]* %4, i64 0, i64 0
  %133 = call i32 @wcscmp(i32* %132, i8* bitcast ([15 x i32]* @.str.30 to i8*))
  %134 = icmp ne i32 %133, 0
  br i1 %134, label %138, label %135

135:                                              ; preds = %131
  %136 = load i32*, i32** %3, align 8
  %137 = call i32 @wcscpy(i32* %136, i8* bitcast ([5 x i32]* @.str.31 to i8*))
  br label %164

138:                                              ; preds = %131
  %139 = getelementptr inbounds [20 x i32], [20 x i32]* %4, i64 0, i64 0
  %140 = call i32 @wcscmp(i32* %139, i8* bitcast ([13 x i32]* @.str.32 to i8*))
  %141 = icmp ne i32 %140, 0
  br i1 %141, label %145, label %142

142:                                              ; preds = %138
  %143 = load i32*, i32** %3, align 8
  %144 = call i32 @wcscpy(i32* %143, i8* bitcast ([5 x i32]* @.str.31 to i8*))
  br label %163

145:                                              ; preds = %138
  %146 = getelementptr inbounds [20 x i32], [20 x i32]* %4, i64 0, i64 0
  %147 = call i32 @wcscmp(i32* %146, i8* bitcast ([13 x i32]* @.str.33 to i8*))
  %148 = icmp ne i32 %147, 0
  br i1 %148, label %152, label %149

149:                                              ; preds = %145
  %150 = load i32*, i32** %3, align 8
  %151 = call i32 @wcscpy(i32* %150, i8* bitcast ([5 x i32]* @.str.34 to i8*))
  br label %162

152:                                              ; preds = %145
  %153 = getelementptr inbounds [20 x i32], [20 x i32]* %4, i64 0, i64 0
  %154 = call i32 @wcscmp(i32* %153, i8* bitcast ([15 x i32]* @.str.35 to i8*))
  %155 = icmp ne i32 %154, 0
  br i1 %155, label %159, label %156

156:                                              ; preds = %152
  %157 = load i32*, i32** %3, align 8
  %158 = call i32 @wcscpy(i32* %157, i8* bitcast ([5 x i32]* @.str.34 to i8*))
  br label %161

159:                                              ; preds = %152
  %160 = load i32, i32* @FALSE, align 4
  store i32 %160, i32* %2, align 4
  br label %183

161:                                              ; preds = %156
  br label %162

162:                                              ; preds = %161, %149
  br label %163

163:                                              ; preds = %162, %142
  br label %164

164:                                              ; preds = %163, %135
  br label %165

165:                                              ; preds = %164, %128
  br label %166

166:                                              ; preds = %165, %121
  br label %167

167:                                              ; preds = %166, %114
  br label %168

168:                                              ; preds = %167, %107
  br label %169

169:                                              ; preds = %168, %100
  br label %170

170:                                              ; preds = %169, %93
  br label %171

171:                                              ; preds = %170, %86
  br label %172

172:                                              ; preds = %171, %79
  br label %173

173:                                              ; preds = %172, %72
  br label %174

174:                                              ; preds = %173, %65
  br label %175

175:                                              ; preds = %174, %58
  br label %176

176:                                              ; preds = %175, %51
  br label %177

177:                                              ; preds = %176, %44
  br label %178

178:                                              ; preds = %177, %37
  br label %179

179:                                              ; preds = %178, %30
  br label %180

180:                                              ; preds = %179, %23
  br label %181

181:                                              ; preds = %180, %16
  %182 = load i32, i32* @TRUE, align 4
  store i32 %182, i32* %2, align 4
  br label %183

183:                                              ; preds = %181, %159, %10
  %184 = load i32, i32* %2, align 4
  ret i32 %184
}

declare dso_local i32 @GetRegValue(i32, i8*, i8*, i32, i32*, i32) #1

declare dso_local i32 @wcscmp(i32*, i8*) #1

declare dso_local i32 @wcscpy(i32*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
